--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,4 +1,4 @@
-.header {
+#header {
   background-color: $color-grey;
   height: 20vh;
   font-size: 1.6rem;
@@ -13,7 +13,7 @@
   @include respond(tab-port) {
     font-size: 1.2rem;
   }
-  &__logo-container {
+  .logo-container {
     display: flex;
     align-items: center;
 
@@ -25,7 +25,6 @@
       @include respond(tab-port) {
         width: 80%;
       }
-
     }
 
     .toggle-btn {
@@ -42,8 +41,8 @@
         outline: none;
       }
 
-      @include respond(tab-port){
-          display: block;
+      @include respond(tab-port) {
+        display: block;
       }
     }
 
@@ -59,8 +58,8 @@
     display: flex;
     justify-content: space-around;
 
-    @include respond(tab-port){
-        display: none;
+    @include respond(tab-port) {
+      display: none;
     }
   }
 
@@ -77,4 +76,9 @@
       }
     }
   }
+}
+
+.header-scrolled {
+  background-color: #eae7e1;
+  box-shadow: 0 0.5rem 0.6rem rgba(0, 0, 0, 0.25);
 }
