--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -3,4 +3,5 @@ $color-grey-2: #030303cc;
 $color-primary: #3498db;
 $color-secondary: #343fdb;
 
-$font-stack: 'Poppins', sans-serif;
+$font-stack-1: 'Poppins', sans-serif;
+$font-stack-2: 'Lato', sans-serif;
