--- a/sass/base.scss
+++ b/sass/base.scss
@@ -54,3 +54,22 @@ body {
     font-size: 75%;
   }
 }
+
+.text-center {
+  text-align: center;
+}
+
+.description {
+  font-family: $font-stack-2;
+  margin: 4rem auto;
+  font-size: 2rem;
+  width: 80%;
+  opacity: 0.8;
+  line-height: 1.5;
+
+  @include respond(tab-port) {
+    justify-content: space-between;
+    width: 100%;
+    text-align: justify;
+  }
+}
