--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -21,6 +21,7 @@
 .cta-btn {
   padding: 1.6rem;
   font-size: 2rem;
+  font-weight: 600;
   border: 0.15rem solid #3498db;
   border-radius: 10rem;
   width: 25rem;
