--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -8,10 +8,6 @@
     width: 100%;
     height: auto;
     padding: 4rem;
-
-    @include respond(phone) {
-      // justify-self: center;
-    }
   }
 
   .content-container {
@@ -30,7 +26,6 @@
     @include respond(phone) {
       .heading-primary {
         font-size: 4rem;
-        // text-align: center;
       }
     }
   }
@@ -39,5 +34,9 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+  }
+
+  @include respond(tab-port) {
+   
   }
 }
