--- a/sass/_mobile-menu.scss
+++ b/sass/_mobile-menu.scss
@@ -7,7 +7,7 @@
   left: 0;
   background-color: #eae7e1;
   height: 100vh;
-  font-size: 1.6rem;
+  font-size: 2rem;
   justify-content: center;
   align-items: center;
   width: 30%;
@@ -30,6 +30,10 @@
 
   @include respond(phone) {
     width: 50%;
+  }
+
+  @include respond(tab-port) {
+    width: 40%;
   }
 }
 
