--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -10,14 +10,28 @@
 }
 
 .heading-secondary {
+  @extend %heading;
   font-size: 3.5rem;
   text-transform: capitalize;
+  color: $color-grey-2;
+}
+
+.heading-tertiary {
+  @extend %heading;
+  font-size: 2.5rem;
+  text-transform: capitalize;
+  color: $color-grey-2;
 }
 
 .intro-text {
+  font-family: $font-stack-2;
   margin: 2rem auto;
   font-size: 2rem;
   width: 100%;
   opacity: 0.8;
   line-height: 1.5;
+}
+
+.text-bold {
+  font-weight: 700;
 }
