--- a/sass/_plans.scss
+++ b/sass/_plans.scss
@@ -3,6 +3,7 @@
   padding: 8rem 2rem;
   display: flex;
   flex-direction: column;
+  align-items: center;
 
   .plans-container {
     margin: 5rem auto 4rem auto;
@@ -56,6 +57,7 @@
       &__feature {
         list-style: none;
         text-align: center;
+        font-family: $font-stack-2;
       }
 
       &__annotation {
@@ -72,6 +74,10 @@
       @include respond(tab-port) {
         width: 50rem;
       }
+
+      @include respond(phone) {
+        width: 34rem;
+    }
     }
 
     @include respond(tab-port) {
