--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -1,6 +1,6 @@
 #contact {
   width: 100%;
-  padding: 8rem 2rem;
+  padding: 2rem 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,7 +10,7 @@
     align-items: center;
     padding-top: 4rem;
 
-    #contact-form {
+    #form {
       display: flex;
       flex-direction: column;
       padding: 4rem;
@@ -32,8 +32,8 @@
         border-radius: 0.5rem;
         font-size: 1.6rem;
         @include respond(phone) {
-            width: 100%;
-          }
+          width: 100%;
+        }
       }
 
       input:focus {
@@ -50,6 +50,10 @@
         font-size: 1.6rem;
         color: #4b77be;
         transition: all 0.3s;
+
+        @include respond(phone) {
+          width: 50%;
+        }
       }
 
       #submit:hover {
@@ -65,8 +69,13 @@
       }
 
       @include respond(phone) {
-          padding: 2rem;
+        padding: 4rem;
       }
     }
+  }
+  @include respond(phone) {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
   }
 }
