--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -23,7 +23,7 @@
       width: 25rem;
       transition: all 0.25s ease-in-out;
       border-radius: 2rem;
-
+      border: .15rem solid $color-primary;
       &-image {
         width: 10rem;
         height: 10rem;
@@ -42,6 +42,8 @@
     }
   }
   @include respond(phone) {
+    flex-direction: column;
     align-items: center;
+    text-align: center;
   }
 }
