--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,8 +1,9 @@
 #footer {
   display: flex;
+  margin-top: 16rem;
   flex-direction: column;
   font-size: 1.6rem;
-  padding: 1rem;
+  padding: 2rem 2rem;
   background-color: #eae7e1;
   width: 100%;
   align-items: flex-end;
@@ -46,5 +47,10 @@
 
   @include respond(tab-port) {
     align-items: center;
+  }
+  @include respond(phone) {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
   }
 }
