--- a/sass/_plans.scss
+++ b/sass/_plans.scss
@@ -83,4 +83,9 @@
       flex-direction: column;
     }
   }
+  @include respond(phone) {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
 }
