--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -14,22 +14,28 @@
   font-size: 3.5rem;
   text-transform: capitalize;
   color: $color-grey-2;
+
+  @include respond(phone) {
+    font-size: 2.5rem;
+  }
 }
 
 .heading-tertiary {
   @extend %heading;
-  font-size: 2.5rem;
+  font-size: 2rem;
   text-transform: capitalize;
   color: $color-grey-2;
+  text-align: center;
 }
 
 .intro-text {
-  font-family: $font-stack-2;
+  font-family: $font-stack-1;
   margin: 2rem auto;
   font-size: 2rem;
   width: 100%;
   opacity: 0.8;
   line-height: 1.5;
+  text-align: justify;
 }
 
 .text-bold {
