--- a/sass/base.scss
+++ b/sass/base.scss
@@ -40,6 +40,7 @@ html {
 body {
   background-color: $color-grey;
   font-family: $font-stack-1;
+  overflow-x: hidden;
 
   @include respond(tab-land) {
     font-size: 56.25%;
@@ -71,5 +72,16 @@ body {
   @include respond(tab-port) {
     justify-content: space-between;
     width: 90%;
+    text-align: justify;
   }
+
+  @include respond(tab-land) {
+    justify-content: space-between;
+    width: 90%;
+    text-align: center;
+  }
+}
+
+#video {
+  display: none;
 }
